@startuml

title __COMPANY's Class Diagram__\n

  namespace com.company {
    class com.company.Employee {
        - employeeID : int
        + Employee()
        + calculatePay()
    }
  }
  

  namespace com.company {
    class com.company.Finance {
        + Finance()
        + generatePaySlip()
        - storePayslip()
    }
  }
  

  namespace com.company {
    class com.company.HumanResources {
        + HumanResources()
        + getHourlyRate()
    }
  }
  

  namespace com.company {
    interface com.company.IFinance {
        {abstract} + generatePaySlip()
    }
  }
  

  namespace com.company {
    interface com.company.IHumanResources {
        {abstract} + getHourlyRate()
    }
  }
  

  namespace com.company {
    interface com.company.IOperations {
        {abstract} + getHoursWorked()
    }
  }
  

  namespace com.company {
    interface com.company.ITechnologyServices {
        {abstract} + storePayslip()
    }
  }
  

  namespace com.company {
    class com.company.Main {
        {static} - employee : Employee
        {static} + main()
    }
  }
  

  namespace com.company {
    class com.company.Operations {
        + Operations()
        + getHoursWorked()
    }
  }
  

  namespace com.company {
    class com.company.Payslip {
        - employeeID : int
        - payAmount : double
        + Payslip()
        + getEmployeeID()
        + getPayAmount()
    }
  }
  

  namespace com.company {
    class com.company.TechnologyServices {
        + TechnologyServices()
        + storePayslip()
    }
  }
  

  com.company.Employee o-- com.company.IFinance : CFO
  com.company.Employee o-- com.company.IOperations : COO
  com.company.Employee o-- com.company.IHumanResources : HR
  com.company.Finance .up.|> com.company.IFinance
  com.company.Finance o-- com.company.ITechnologyServices : CTO
  com.company.Finance o-- com.company.Payslip : payslip
  com.company.HumanResources .up.|> com.company.IHumanResources
  com.company.Operations .up.|> com.company.IOperations
  com.company.TechnologyServices .up.|> com.company.ITechnologyServices


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
